--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,8 +132,8 @@ GridEnabled=False
 SnapScaleEnabled=False
 
 [MRU]
-MRUItem0=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
-MRUItem1=/Game/SideScrollerBP/Maps/MainMenuLevel
+MRUItem0=/Game/SideScrollerBP/Maps/MainMenuLevel
+MRUItem1=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bRealtimeMaterialViewport=False
@@ -234,10 +234,10 @@ ButtonBP_C=CapsuleComponent.Collision.Collision,
 K2Node_VariableGet=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,SideScrollerCharacter_C.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,
 MovingPlatform_C=StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,
 PropertyWrapper=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,SideScrollerCharacter_C.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
-SideScrollerCharacter_C=StaticMeshActor.Physics.ConstraintsGroup,
+SideScrollerCharacter_C=
 BlendSpace1D=BlendSpace1D.BlendSamples.GroupName,BlendSpace1D.Axis Settings.Horizontal Axis,
 CameraComponent=CameraComponent.PostProcess.Rendering Features,
-CapsuleComponent=StaticMeshActor.Physics.ConstraintsGroup,
+CapsuleComponent=
 K2Node_VariableSet=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,SideScrollerCharacter_C.Physics.ConstraintsGroup,StaticMeshActor.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,
 AimOffsetBlendSpace1D=AimOffsetBlendSpace1D.Axis Settings.Horizontal Axis,AimOffsetBlendSpace1D.BlendSamples.GroupName,
 Mainchar_AnimBp_C=
@@ -330,7 +330,7 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+LastLevel=/Game/SideScrollerBP/Maps/MainMenuLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -1839,6 +1839,18 @@ MainMenuController_C.Controller=True
 MainMenuController_C.Replication=True
 MainMenuController_C.Actor=True
 MainMenuController_C.Input=True
+widgetbp_C.Appearance=True
+widgetbp_C.Designer=True
+widgetbp_C.Input=True
+widgetbp_C.Interaction=True
+widgetbp_C.Performance=True
+widgetbp_C.Layout=True
+widgetbp_C.Behavior=True
+widgetbp_C.Render Transform=True
+widgetbp_C.Accessibility=True
+widgetbp_C.Clipping=True
+widgetbp_C.Navigation=True
+widgetbp_C.Localization=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1931,8 +1943,8 @@ SoundNodeRandom="\"Object.Random.Weights\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
 SkeletalMesh="\"Object.ImportSettings.AssetImportData.Object.Transform.ImportTranslation\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Appearance.FillColorAndOpacity\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" "
+Widget=
+Visual=
 Image="\"Object.Appearance.Brush\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
@@ -2058,25 +2070,25 @@ InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
 MRUItem0=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
-MRUItem1=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
-MRUItem2=/Game/SideScrollerBP/Maps/MainMenuLevel
-MRUItem3=/Game/SideScrollerBP/Blueprints/MainMenu/MainMenuController
-MRUItem4=/Game/SideScrollerBP/Blueprints/MainMenu/CreditsWidget
-MRUItem5=/Game/SideScrollerBP/Blueprints/MainMenu/MainMenuWidget
-MRUItem6=/Game/SideScrollerBP/Blueprints/healthchest
-MRUItem7=/Game/SideScrollerBP/Blueprints/ammochest
-MRUItem8=/Game/SideScrollerBP/Blueprints/ElevatorBP
-MRUItem9=/Game/SideScrollerBP/BuildFiles/Materials/firstaid
-MRUItem10=/Game/SideScrollerBP/BuildFiles/trimsheetscififirstaidbox_Cube_017
-MRUItem11=/Game/SideScrollerBP/BuildFiles/trimsheetscififirstaidbox_Cube_016
-MRUItem12=/Game/SideScrollerBP/Blueprints/Enemy/EnemyBP
-MRUItem13=/Game/SideScrollerBP/Blueprints/ButtonBP
-MRUItem14=/Game/SideScrollerBP/Blueprints/DoorBP_2
-MRUItem15=/Game/SideScrollerBP/Blueprints/AmmoWidget
-MRUItem16=/Game/SideScrollerBP/Blueprints/healthbarWidget
-MRUItem17=/Game/SideScrollerBP/Blueprints/staminaWidget
-MRUItem18=/Game/SideScrollerBP/Blueprints/healthbarBP
-MRUItem19=/Game/SideScrollerBP/sound/dieremesherforomurcek
+MRUItem1=/Game/SideScrollerBP/Blueprints/widgetbp
+MRUItem2=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+MRUItem3=/Game/SideScrollerBP/Maps/MainMenuLevel
+MRUItem4=/Game/SideScrollerBP/Blueprints/MainMenu/MainMenuController
+MRUItem5=/Game/SideScrollerBP/Blueprints/MainMenu/CreditsWidget
+MRUItem6=/Game/SideScrollerBP/Blueprints/MainMenu/MainMenuWidget
+MRUItem7=/Game/SideScrollerBP/Blueprints/healthchest
+MRUItem8=/Game/SideScrollerBP/Blueprints/ammochest
+MRUItem9=/Game/SideScrollerBP/Blueprints/ElevatorBP
+MRUItem10=/Game/SideScrollerBP/BuildFiles/Materials/firstaid
+MRUItem11=/Game/SideScrollerBP/BuildFiles/trimsheetscififirstaidbox_Cube_017
+MRUItem12=/Game/SideScrollerBP/BuildFiles/trimsheetscififirstaidbox_Cube_016
+MRUItem13=/Game/SideScrollerBP/Blueprints/Enemy/EnemyBP
+MRUItem14=/Game/SideScrollerBP/Blueprints/ButtonBP
+MRUItem15=/Game/SideScrollerBP/Blueprints/DoorBP_2
+MRUItem16=/Game/SideScrollerBP/Blueprints/AmmoWidget
+MRUItem17=/Game/SideScrollerBP/Blueprints/healthbarWidget
+MRUItem18=/Game/SideScrollerBP/Blueprints/staminaWidget
+MRUItem19=/Game/SideScrollerBP/Blueprints/healthbarBP
 
 [PlacementMode]
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/healthchest.healthchest;
@@ -2386,6 +2398,7 @@ GameMapsSettings.DefaultMaps=True
 /Game/SideScrollerBP/Blueprints/MainMenu/MainMenuController.MainMenuController=0
 /Game/SideScrollerBP/Blueprints/MainMenu/CreditsWidget.CreditsWidget=0
 /Game/SideScrollerBP/Blueprints/MainMenu/MainMenuWidget.MainMenuWidget=0
+/Game/SideScrollerBP/Blueprints/widgetbp.widgetbp=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2425,7 +2438,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=181.600 Y=0.000
-WindowSize=X=1366.400 Y=806.400
+WindowSize=X=1368.000 Y=808.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
