now omurcek doesnt kill himself
his not suicidal anymore

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,8 +132,8 @@ GridEnabled=False
 SnapScaleEnabled=False
 
 [MRU]
-MRUItem0=/Game/SideScrollerBP/Maps/MainMenuLevel
-MRUItem1=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+MRUItem0=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+MRUItem1=/Game/SideScrollerBP/Maps/MainMenuLevel
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bRealtimeMaterialViewport=False
@@ -299,7 +299,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints/Enemy
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
 SequenceBrowser.ActiveFrontendFilters=
@@ -330,11 +330,10 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/SideScrollerBP/Maps/MainMenuLevel
+LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1857,7 +1856,7 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendable
 Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
@@ -1902,7 +1901,7 @@ SoundWave="\"Object.Format.Format|Quality\" \"Object.Playback.Playback|Streaming
 SoundBase="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Source.BusSends\" \"Object.Effects.Effects|Submix\" "
 InterpToMovementComponent=
 MovementComponent=
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
 SoundAttenuation="\"Object.Settings.Attenuation.SubmixSendSettings\" \"Object.Settings.Attenuation.AttenuationShapeExtents\" "
 SoundCue="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Source.BusSends\" \"Object.Effects.Effects|Submix\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1914,11 +1913,11 @@ ClothingAssetCommon="\"Object.Config.ClothConfigs\" "
 ClothingAssetBase="\"Object.Config.ClothConfigs\" "
 StaticMeshComponent=
 MeshComponent=
-PrimitiveComponent=
-SceneComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
 ProjectileMovementComponent="\"Object.Velocity.Velocity\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ShapeComponent=
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[3]\" "
 SoundNodeMixer="\"Object.Mixer.InputVolume\" "
 SoundNode=
 ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier.Distribution\" "
@@ -2069,20 +2068,20 @@ LastLogListing=LightingResults
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
-MRUItem1=/Game/SideScrollerBP/Blueprints/widgetbp
-MRUItem2=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
-MRUItem3=/Game/SideScrollerBP/Maps/MainMenuLevel
-MRUItem4=/Game/SideScrollerBP/Blueprints/MainMenu/MainMenuController
-MRUItem5=/Game/SideScrollerBP/Blueprints/MainMenu/CreditsWidget
-MRUItem6=/Game/SideScrollerBP/Blueprints/MainMenu/MainMenuWidget
-MRUItem7=/Game/SideScrollerBP/Blueprints/healthchest
-MRUItem8=/Game/SideScrollerBP/Blueprints/ammochest
-MRUItem9=/Game/SideScrollerBP/Blueprints/ElevatorBP
-MRUItem10=/Game/SideScrollerBP/BuildFiles/Materials/firstaid
-MRUItem11=/Game/SideScrollerBP/BuildFiles/trimsheetscififirstaidbox_Cube_017
-MRUItem12=/Game/SideScrollerBP/BuildFiles/trimsheetscififirstaidbox_Cube_016
-MRUItem13=/Game/SideScrollerBP/Blueprints/Enemy/EnemyBP
+MRUItem0=/Game/SideScrollerBP/Blueprints/Enemy/EnemyBP
+MRUItem1=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem2=/Game/SideScrollerBP/Blueprints/widgetbp
+MRUItem3=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+MRUItem4=/Game/SideScrollerBP/Maps/MainMenuLevel
+MRUItem5=/Game/SideScrollerBP/Blueprints/MainMenu/MainMenuController
+MRUItem6=/Game/SideScrollerBP/Blueprints/MainMenu/CreditsWidget
+MRUItem7=/Game/SideScrollerBP/Blueprints/MainMenu/MainMenuWidget
+MRUItem8=/Game/SideScrollerBP/Blueprints/healthchest
+MRUItem9=/Game/SideScrollerBP/Blueprints/ammochest
+MRUItem10=/Game/SideScrollerBP/Blueprints/ElevatorBP
+MRUItem11=/Game/SideScrollerBP/BuildFiles/Materials/firstaid
+MRUItem12=/Game/SideScrollerBP/BuildFiles/trimsheetscififirstaidbox_Cube_017
+MRUItem13=/Game/SideScrollerBP/BuildFiles/trimsheetscififirstaidbox_Cube_016
 MRUItem14=/Game/SideScrollerBP/Blueprints/ButtonBP
 MRUItem15=/Game/SideScrollerBP/Blueprints/DoorBP_2
 MRUItem16=/Game/SideScrollerBP/Blueprints/AmmoWidget
@@ -2438,7 +2437,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=181.600 Y=0.000
-WindowSize=X=1368.000 Y=808.000
+WindowSize=X=1369.600 Y=808.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
