--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,6 +5,8 @@ CompanyName=AHISD Studios
 Description=best jumper ever
 CopyrightNotice=ALL OWNED  BY AHISD STUDIOS
 bUseBorderlessWindow=True
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "CD72DEA64512D0169C0B0B808E02B2E8", "scifishooter")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "19D0D97A4E74421B977183A96A3AD831", "scifishooter")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 FullRebuild=False
