--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -341,7 +341,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/SideScrollerBP/Maps/level1
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2523,7 +2523,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=41.600 Y=0.000
-WindowSize=X=1388.800 Y=808.000
+WindowSize=X=1390.400 Y=808.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
