araknit navigation fix
araknit navigation fix

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,7 +15,6 @@ GlobalDefaultServerGameMode=None
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
 
-
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
@@ -34,4 +33,7 @@ bIterativeCookingForLaunchOn=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 Compiler=Default
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Static
 
