--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -230,7 +230,7 @@ TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.turn,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Sprinting,InputSettings.Bindings.ActionMappings.Slide,StaticMeshActor.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Pause Game,StaticMeshActor.Rendering.TextureStreaming,PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.turn,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Sprinting,InputSettings.Bindings.ActionMappings.Slide,StaticMeshActor.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Pause Game,StaticMeshActor.Rendering.TextureStreaming,PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.turn,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Sprinting,InputSettings.Bindings.ActionMappings.Slide,StaticMeshActor.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Pause Game,StaticMeshActor.Rendering.TextureStreaming,PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,
-SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,
+SceneComponent=
 Actor=PostProcessVolume.Lens.Lens,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Rendering Features.Rendering Features,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.turn,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Sprinting,InputSettings.Bindings.ActionMappings.Slide,StaticMeshActor.Rendering.TextureStreaming,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.Pause Game,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PostProcessVolume.Color Grading.Color Grading,InputSettings.Bindings.ActionMappings.Crouch,SideScrollerCharacter_C.Physics.ConstraintsGroup,SideScrollerCharacter_C.Rendering.LOD,
 DoorBP_C=SkeletalMeshComponent.Collision.Collision,
 ButtonBP_C=CapsuleComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.turn,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Sprinting,InputSettings.Bindings.ActionMappings.Slide,StaticMeshActor.Rendering.TextureStreaming,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.Pause Game,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PostProcessVolume.Color Grading.Color Grading,InputSettings.Bindings.ActionMappings.Crouch,SideScrollerCharacter_C.Physics.ConstraintsGroup,SideScrollerCharacter_C.Rendering.LOD,
@@ -284,6 +284,8 @@ PauseMenu_C=
 PlayerController=
 nextlevel_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,
 biandadusuverdim_C=PostProcessVolume.Lens.Lens,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Rendering Features.Rendering Features,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.turn,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Sprinting,InputSettings.Bindings.ActionMappings.Slide,StaticMeshActor.Rendering.TextureStreaming,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.Pause Game,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PostProcessVolume.Color Grading.Color Grading,InputSettings.Bindings.ActionMappings.Crouch,SideScrollerCharacter_C.Physics.ConstraintsGroup,SideScrollerCharacter_C.Rendering.LOD,
+shroom1_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.turn,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Sprinting,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.Pause Game,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PostProcessVolume.Color Grading.Color Grading,InputSettings.Bindings.ActionMappings.Crouch,SideScrollerCharacter_C.Physics.ConstraintsGroup,SideScrollerCharacter_C.Rendering.LOD,
+shroom2_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.turn,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Sprinting,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings.Pause Game,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,PostProcessVolume.Color Grading.Color Grading,InputSettings.Bindings.ActionMappings.Crouch,SideScrollerCharacter_C.Physics.ConstraintsGroup,SideScrollerCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -308,7 +310,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/BuildFiles/level2rocks
+ContentBrowserTab1.SelectedPaths=/Game
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
 SequenceBrowser.ActiveFrontendFilters=
@@ -343,7 +345,6 @@ LastLevel=/Game/SideScrollerBP/Maps/level2
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/Enemy/EnemyBP.EnemyBP
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1977,6 +1978,20 @@ Character.Input=True
 Character.Actor=True
 Character.Materials=True
 Actor.Input=True
+shroom1_C.Tick=True
+shroom1_C.Replication=True
+shroom1_C.Rendering=True
+shroom1_C.Collision=True
+shroom1_C.Actor=True
+shroom1_C.Input=True
+shroom1_C.TransformCommon=True
+shroom2_C.Tick=True
+shroom2_C.Replication=True
+shroom2_C.Rendering=True
+shroom2_C.Collision=True
+shroom2_C.Actor=True
+shroom2_C.Input=True
+shroom2_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2038,8 +2053,8 @@ PawnMovementComponent=
 NavMovementComponent=
 ClothingAssetCommon="\"Object.Config.ClothConfigs\" "
 ClothingAssetBase="\"Object.Config.ClothConfigs\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
+StaticMeshComponent=
+MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 ProjectileMovementComponent="\"Object.Velocity.Velocity\" "
@@ -2201,28 +2216,32 @@ LastLogListing=LightingResults
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SideScrollerBP/Blueprints/Enemy/EnemyBP
-MRUItem1=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem0=/Game/SideScrollerBP/BuildFiles/Shrooms/shroom2
+MRUItem1=/Game/SideScrollerBP/BuildFiles/Shrooms/shroom1
 MRUItem2=/Game/SideScrollerBP/Maps/level2
-MRUItem3=/Game/SideScrollerBP/Maps/level1
-MRUItem4=/Game/SideScrollerBP/Blueprints/Gun/BulletBP
-MRUItem5=/Game/SideScrollerBP/Blueprints/Enemy/OMURCEK_MESH
-MRUItem6=/Game/SideScrollerBP/BuildFiles/level2rocks/rocks_L11
-MRUItem7=/Game/SideScrollerBP/Blueprints/ElevatorBP_2
-MRUItem8=/Game/SideScrollerBP/Blueprints/biandadusuverdim
-MRUItem9=/Game/SideScrollerBP/Blueprints/DoorBP_2
-MRUItem10=/Game/SideScrollerBP/Blueprints/MovingPlatform
-MRUItem11=/Game/SideScrollerBP/Blueprints/Interact_Interface
-MRUItem12=/Game/SideScrollerBP/Blueprints/ButtonBP
-MRUItem13=/Game/SideScrollerBP/Blueprints/widgetbp
-MRUItem14=/Game/SideScrollerBP/Blueprints/ElevatorBP
-MRUItem15=/Game/SideScrollerBP/Blueprints/DoorBP
-MRUItem16=/Game/SideScrollerBP/Blueprints/ammochest
-MRUItem17=/Game/SideScrollerBP/Blueprints/PlatformOpacityMAT
-MRUItem18=/Game/SideScrollerBP/BuildFiles/level2rocks/rocks_L1
-MRUItem19=/Game/SideScrollerBP/BuildFiles/level2rocks/rocks_L9
+MRUItem3=/Game/SideScrollerBP/BuildFiles/Shrooms/Material_017
+MRUItem4=/Game/SideScrollerBP/Blueprints/Enemy/EnemyBP
+MRUItem5=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem6=/Game/SideScrollerBP/Maps/level1
+MRUItem7=/Game/SideScrollerBP/Blueprints/Gun/BulletBP
+MRUItem8=/Game/SideScrollerBP/Blueprints/Enemy/OMURCEK_MESH
+MRUItem9=/Game/SideScrollerBP/BuildFiles/level2rocks/rocks_L11
+MRUItem10=/Game/SideScrollerBP/Blueprints/ElevatorBP_2
+MRUItem11=/Game/SideScrollerBP/Blueprints/biandadusuverdim
+MRUItem12=/Game/SideScrollerBP/Blueprints/DoorBP_2
+MRUItem13=/Game/SideScrollerBP/Blueprints/MovingPlatform
+MRUItem14=/Game/SideScrollerBP/Blueprints/Interact_Interface
+MRUItem15=/Game/SideScrollerBP/Blueprints/ButtonBP
+MRUItem16=/Game/SideScrollerBP/Blueprints/widgetbp
+MRUItem17=/Game/SideScrollerBP/Blueprints/ElevatorBP
+MRUItem18=/Game/SideScrollerBP/Blueprints/DoorBP
+MRUItem19=/Game/SideScrollerBP/Blueprints/ammochest
 
 [PlacementMode]
+RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/Shrooms/Shrooms_l15.Shrooms_l15;
+RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/Shrooms/shroom2.shroom2;
+RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/Shrooms/shroom1.shroom1;
+RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/Shrooms/Shrooms_L14.Shrooms_L14;
 RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/level2rocks/rocks_L3.rocks_L3;
 RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/level2rocks/rocks_L4.rocks_L4;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -2239,10 +2258,6 @@ RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/untitled_Cylinder.untitled_Cylind
 RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/level2rocks/rocks_L7.rocks_L7;
 RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/level2rocks/rocks_L6.rocks_L6;
 RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/level2rocks/rocks_L5.rocks_L5;
-RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/level2rocks/rocks_L13.rocks_L13;
-RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/level2rocks/rocks_L1.rocks_L1;
-RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/level2rocks/rocks_L11.rocks_L11;
-RecentlyPlaced=/Game/SideScrollerBP/BuildFiles/level2rocks/rocks_L12.rocks_L12;
 
 [MaterialEditor]
 PrimType=1
@@ -2428,6 +2443,7 @@ CharacterMovementComponent.Character Movement: Walking=True
 CharacterMovementComponent.Character Movement: Jumping / Falling=True
 CharacterMovementComponent.Character Movement (General Settings)=True
 MovingPlatform_C.Actor=True
+PointLightComponent.Light=True
 
 [AssetEditorToolkitTabLocation]
 /Game/SideScrollerBP/Material_001.Material_001=1
@@ -2585,6 +2601,8 @@ MovingPlatform_C.Actor=True
 /Game/SideScrollerBP/BuildFiles/level2rocks/rocks_L9.rocks_L9=1
 /Game/SideScrollerBP/Blueprints/PlatformOpacityMAT.PlatformOpacityMAT=0
 /Game/SideScrollerBP/Blueprints/biandadusuverdim.biandadusuverdim=0
+/Game/SideScrollerBP/BuildFiles/Shrooms/Material_017.Material_017=1
+/Game/SideScrollerBP/BuildFiles/Shrooms/shroom1.shroom1=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
