--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -151,7 +151,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [DetailCustomWidgetExpansion]
-PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.turn,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Sprinting,InputSettings.Bindings.ActionMappings.Slide,StaticMeshActor.Rendering.TextureStreaming,PostProcessVolume.Color Grading.Color Grading,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Pause Game,SideScrollerCharacter_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,SideScrollerCharacter_C.Rendering.LOD,InputSettings.Bindings.ActionMappings.NewActionMapping_0,BoxComponent.Collision.Collision,PostProcessVolume.Color Grading.Color Grading
+PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,StaticMeshActor.Physics.ConstraintsGroup,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.turn,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Sprinting,InputSettings.Bindings.ActionMappings.Slide,StaticMeshActor.Rendering.TextureStreaming,PostProcessVolume.Color Grading.Color Grading,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Pause Game,SideScrollerCharacter_C.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,SideScrollerCharacter_C.Rendering.LOD,InputSettings.Bindings.ActionMappings.NewActionMapping_0,BoxComponent.Collision.Collision,
 BrushComponent=
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.turn,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Sprinting,InputSettings.Bindings.ActionMappings.Slide,StaticMeshActor.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Pause Game,StaticMeshActor.Rendering.TextureStreaming,PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.turn,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Aim,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.Reload,InputSettings.Bindings.ActionMappings.Sprinting,InputSettings.Bindings.ActionMappings.Slide,StaticMeshActor.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Crouch,InputSettings.Bindings.ActionMappings.Pause Game,StaticMeshActor.Rendering.TextureStreaming,PostProcessVolume.Lens.Lens,PostProcessVolume.Rendering Features.Rendering Features,
@@ -321,7 +321,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints/Enemy
+ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
 SequenceBrowser.ActiveFrontendFilters=
@@ -2178,8 +2178,8 @@ EnemyBP2_C.Input=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
@@ -2238,8 +2238,8 @@ ClothingAssetCommon="\"Object.Config.ClothConfigs\" "
 ClothingAssetBase="\"Object.Config.ClothConfigs\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent=
+SceneComponent=
 ProjectileMovementComponent="\"Object.Velocity.Velocity\" "
 SphereComponent=
 ShapeComponent=
@@ -2407,7 +2407,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2887,7 +2887,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=0.000
-WindowSize=X=1910.000 Y=1070.000
+WindowSize=X=1910.000 Y=1022.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
